--- a/Decir_Algo/MainWindow.xaml
+++ b/Decir_Algo/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Decir_Algo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Background="Black" Height="350" Width="525">
     <Grid>
-        
+
+        <Button Name="button1" VerticalAlignment="Bottom" Height="20" Width="200" Content="Cliquéame!!!!!!" FontWeight="Bold" Click="Button_MouseDown">
+            
+        </Button>
     </Grid>
 </Window>
